--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,4 +4,4 @@ web:
         - "9080:9080"
     volumes:
         - .:/home/darth
-        - /etc/nginx:/etc/nginx/
+        - ./site.conf:/etc/nginx/conf.d/site.conf
